--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ nav a:hover::before{
     background-color: whitesmoke;
     position: absolute;
     top: 650px;
-    height: 90px;
+    height: 10%;
     width: 100%;
     transform: skewY(3deg);
     z-index: 30;
