--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ nav a:hover::before{
 #wave{
     background-color: whitesmoke;
     position: absolute;
-    top: 50%;
+    top: 85vh;
     height: 15%;
     width: 100%;
     transform: skewY(3deg);
