--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html{
 body{
     margin: 0px;
     padding: 0px;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     font-family: 'monteserrat';
 }
 /* .loader-wrapper {
