--- a/style.css
+++ b/style.css
@@ -6,8 +6,8 @@ html{
 body{
     margin: 0px;
     padding: 0px;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     font-family: 'monteserrat';
 }
 /* .loader-wrapper {
@@ -90,17 +90,17 @@ nav a:hover::before{
 }
 
 #wave{
-    background-color: whitesmoke;
+    background-color: #E0E0E2;
     position: absolute;
-    top: 85vh;
-    height: 15%;
+    top: 70%;
+    height: 12%;
     width: 100%;
     transform: skewY(3deg);
     z-index: 30;
 }
 
 #section1{
-    background-color: whitesmoke;
+    background-color: #E0E0E2;
 }
 .background{
     z-index: 10;
@@ -136,8 +136,8 @@ nav a:hover::before{
     text-align: left;
 }
 #section1 .col-md h3{
-    font-size: 4vw;
-    color: rgb(36, 33, 33);
+    font-size: 3.5vw;
+    color: black;
     font-weight: bold;
     animation: fadeIn 10s;
     text-align: left;
@@ -157,14 +157,14 @@ nav a:hover::before{
 
 #section2{
     height: 120%;
-    background: whitesmoke;
+    background: #E0E0E2;
     display: inline-block;
     width: 100%;
     font-family: 'Garamond';
 }
 #whitebox{
     z-index: 40;
-    background-color:whitesmoke;
+    background-color:#E0E0E2;
     max-width: 100%;
     position: absolute;
     height: 100px;
@@ -220,14 +220,20 @@ nav a:hover::before{
     top: -5px;
     margin-left: 20px
 }
-.section2 .col-sm-4{
-    top: 20%;
+.profile_info{
+    width: 90%;
+    padding: 3%;
+    margin-bottom: 2%;
+}
+.profile_info .col-sm-4{
+    top: 5%;
+    width: 25%;
 }
 .intro{
     z-index: 9;
     color: black;
     font-family: "monteserrat";
-    font-size: 1.4vw;
+    font-size: 1.3vw;
     text-align: center;
 }
 .personal{
@@ -235,7 +241,7 @@ nav a:hover::before{
     color: black;
     text-align: left;
     font-family: "monteserrat";
-    font-size: 1.4vw;
+    font-size: 1.3vw;
     text-align: center;
 }
 .my_picture{
@@ -248,7 +254,7 @@ nav a:hover::before{
 }
 #containerWave{
     width: 100%;
-    background-color: whitesmoke;
+    background-color: #E0E0E2;
     display: inline-block;
     height: 600px;
 }
@@ -269,12 +275,12 @@ nav a:hover::before{
     background-size: 100% auto;
 }
 .btn{
-    color: white;
+    color: #E0E0E2;
     position: relative;
     background-color: #576574;
     font-size: 1.2vw;
     font-family: "monteserrat";
-    border: 1.5px solid #ff7675;
+    border: 2.3px solid #102020;
     width: 14vw;
     height: 3vw;
     margin-left: auto;
@@ -291,7 +297,7 @@ nav a:hover::before{
     z-index: 100;
 }
 .btn::before{
-    background: #ff7675;
+    background: #B5BAD0;
     content:"";
     display: inline-block;
     position: absolute;
@@ -300,17 +306,17 @@ nav a:hover::before{
     top: 50%;
     left: 50%;
     z-index: 1;
-    transform: translate(-50%, -50%);
+    transform: translate(-55%, -50%);
     transition: all 0.6s ease;
 } 
 
 .resume::before{
     width: 100%;
     height: 0%;
-    transform: translate(-50%, -50%) rotate(45deg);
+    transform: translate(-55%, -50%) rotate(45deg);
 }
 .resume:hover::before{
-    height: 380%;
+    height: 450%;
 }
 .cover::before{
     width: 100%;
@@ -318,7 +324,7 @@ nav a:hover::before{
     transform: translate(-50%, -50%) rotate(-45deg);
 }
 .cover:hover::before{
-    height: 380%;
+    height: 450%;
 }
 #section3{
     height: 150%;
@@ -340,16 +346,16 @@ nav a:hover::before{
     font-weight: bold;
     text-align: center;
     margin: 8% auto 1%;
-    color: whitesmoke;
+    color: #E0E0E2;
     font-family: 'monteserrat';
 }
 #containerSec3 h1 .student{
     font-size: 2.5vw;
     font-weight: normal;
-    color: whitesmoke;
+    color: #E0E0E2;
 }
 #containerSec3 #dash3{
-    background-color: whitesmoke;
+    background-color: #E0E0E2;
     border-radius: 50%;
     position: relative;
     z-index: 150;
@@ -362,7 +368,7 @@ nav a:hover::before{
 .main-timeline{
     position: relative;
     margin: 0 auto;
-    margin-top: -3.7%;
+    margin-top: -1vh;
     background-color: #102020;
     padding: 5%;
 }
@@ -389,11 +395,11 @@ nav a:hover::before{
     width: 100px;
     height: 100px;
     right: -50px;
-    background-color: #abba82;
+    background-color: #B5BAD0;
     border: 4px solid #037c87;
     top: 75px;
     border-radius: 50%;
-    z-index: 1;
+    z-index: 11;
 }
 .left{
     left: 0;
@@ -407,10 +413,10 @@ nav a:hover::before{
     top: 75px;
     width: 0;
     z-index: 1;
-    right: 7.5%;
-    border: medium solid #487549;
+    right: 3.66vw;
+    border: medium solid #416788;
     border-width: 50px 0 50px 50px;
-    border-color: transparent transparent transparent #487549;
+    border-color: transparent transparent transparent #416788;
 }
 .right{
     left: 50%;
@@ -422,17 +428,17 @@ nav a:hover::before{
     position: absolute;
     top: 75px;
     width: 0;
-    left: 7.5%;
-    border: medium solid #487549;
+    left: 3.59vw;
+    border: medium solid #416788;
     border-width: 50px 50px 50px 0;
-    border-color: transparent #487549 transparent transparent;
+    border-color: transparent #416788 transparent transparent;
 }
 .right::after{
     left: -50px;
 }
 .timeline-content{
-    padding: 20px 30px;
-    background-color: #487549; 
+    padding: 5% 8%;
+    background-color: #416788; 
     width: 95%;
     position: relative;
     font-family: "monteserrat";
@@ -455,9 +461,9 @@ nav a:hover::before{
     text-decoration: none;
 }
 .timeline-content p{
-    color: #abba82;
+    color: #E0E0E2;
     font-weight: bolder;
-    font-size: 1.6vw;
+    font-size: 1.4vw;
     text-decoration: none;
 }
 .project1{
@@ -467,22 +473,22 @@ nav a:hover::before{
 }
 .right .icon{
     font-size: 3.5em;
-    color: #003b32;
+    color: #416788;
     position: relative;
     transform: translate(-80px, 88px);
-    z-index: 5;
+    z-index: 15;
 }
 .left .icon{
-    color: #003b32;
+    color: #416788;
     font-size: 3.5em;
     position: relative;
     left: 100%;
     transform: translate(8px, 88px);
-    z-index: 5;
+    z-index: 15;
 }
 #section4{
     height: 180%;
-    background: white; 
+    background: #E0E0E2; 
     background-blend-mode: multiply;
     display: inline-block;
     width: 100%;
@@ -651,7 +657,7 @@ h1{
     margin: 100px;
     text-align: center;
     padding: 0;
-    color: whitesmoke;
+    color: #E0E0E2;
     font-size: 5em;
 }
 #footer{
@@ -715,7 +721,7 @@ h1{
     background-color: #999999;
     margin: auto 3vw;
     box-shadow: 3px 3px 10px #aeaeae,
-                -4px -4px 10px white;
+                -4px -4px 10px #E0E0E2;
     line-height: 4.5vw;
     font-size: 2.5vw;
     color: #333;
