--- a/style.css
+++ b/style.css
@@ -169,7 +169,7 @@ nav a:hover::before{
     z-index: 9;
     color: black;
     font-family: "monteserrat";
-    font-size: 1.3vw;
+    font-size: 1.5vw;
     width: 80%;
     margin-left: 10%;
     text-align: center;
@@ -181,7 +181,7 @@ nav a:hover::before{
     width: 80%;
     margin-left: 10%;
     font-family: "monteserrat";
-    font-size: 1.3vw;
+    font-size: 1.5vw;
     text-align: center;
 }
 .my_picture{
@@ -353,7 +353,7 @@ nav a:hover::before{
     top: 75px;
     width: 0;
     z-index: 1;
-    right: 3.8vw;
+    right: 3.66vw;
     border: medium solid #416788;
     border-width: 50px 0 50px 50px;
     border-color: transparent transparent transparent #416788;
@@ -368,7 +368,7 @@ nav a:hover::before{
     position: absolute;
     top: 75px;
     width: 0;
-    left: 3.8vw;
+    left: 3.59vw;
     border: medium solid #416788;
     border-width: 50px 50px 50px 0;
     border-color: transparent #416788 transparent transparent;
@@ -815,9 +815,10 @@ h1{
         color: black;
         font-family: "monteserrat";
         font-size: 2.5vw;
+        transform: translateX(-2%);
         display: block;
         text-align: center;
-        width: 90vw;
+        width: 80vw;
     }
     .personal{
         z-index: 9;
@@ -825,8 +826,9 @@ h1{
         color: black;
         font-family: "monteserrat";
         font-size: 2.5vw;
+        transform: translateX(-2%);
         text-align: center;
-        width: 90vw;
+        width: 80vw;
     }
     .my_picture{
         border: .2vw solid #000;
