--- a/style.css
+++ b/style.css
@@ -368,7 +368,7 @@ nav a:hover::before{
     position: absolute;
     top: 75px;
     width: 0;
-    left: 3.85vw;
+    left: 3.8vw;
     border: medium solid #416788;
     border-width: 50px 50px 50px 0;
     border-color: transparent #416788 transparent transparent;
@@ -836,7 +836,7 @@ h1{
         background-image: url(Website/picture.JPG);
         max-width: 20vw;
         justify-content: center;
-        margin-left: 175%;
+        transform: translateX(15px);
     }
     #containerWave{
         width: 100%;
@@ -1326,7 +1326,7 @@ h1{
     }
 }
 
-/* Not a phone, b */
+/* Not a phone, like a tablet */
 @media screen and (min-width: 450px) and (max-width: 1000px){
     .aboutName{
         font-size: 4vw;
